--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,6 @@
 <div id="root"></div>
 </body>
 <head>
-    <script src="../src/index.js" type="module"></script>
+    <script src="../src/index.ts" type="module"></script>
 </head>
 </html>
